{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 13,
  "lineage": "ba238cf5-b064-e126-ba31-e4fbcb830aec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_apache_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00c8dfcb0b542ee0c",
            "arn": "arn:aws:ec2:ap-northeast-1:959028105308:instance/i-060d4fa6b7b0c0df3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060d4fa6b7b0c0df3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ELB-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06748077d68ac39ac",
            "private_dns": "ip-10-10-1-231.ap-northeast-1.compute.internal",
            "private_ip": "10.10.1.231",
            "public_dns": "ec2-52-197-44-70.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.197.44.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02aedb6f9be600767",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f91249d16c2ad023",
            "tags": {
              "Name": "ec2_apache"
            },
            "tags_all": {
              "Name": "ec2_apache"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094e5c82c265ad2e8"
            ]
          },
          "dependencies": [
            "aws_subnet.zabbix_subnet_a",
            "aws_vpc.zabbix_vpc",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zabbix_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:959028105308:internet-gateway/igw-05304d9ba6c15b3aa",
            "id": "igw-05304d9ba6c15b3aa",
            "owner_id": "959028105308",
            "tags": {
              "Name": "zabbix_igw"
            },
            "tags_all": {
              "Name": "zabbix_igw"
            },
            "vpc_id": "vpc-07f92fbb5f8752980"
          },
          "dependencies": [
            "aws_vpc.zabbix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "zabbix_rt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0725a7820499ee53d",
            "original_route_table_id": "rtb-0582c4d6926e855b8",
            "route_table_id": "rtb-0504a53c9ea22b1ea",
            "vpc_id": "vpc-07f92fbb5f8752980"
          },
          "dependencies": [
            "aws_internet_gateway.zabbix_igw",
            "aws_route_table.zabbix_rt",
            "aws_vpc.zabbix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zabbix_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:959028105308:route-table/rtb-0504a53c9ea22b1ea",
            "id": "rtb-0504a53c9ea22b1ea",
            "owner_id": "959028105308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05304d9ba6c15b3aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zabbix_rt"
            },
            "tags_all": {
              "Name": "zabbix_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f92fbb5f8752980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.zabbix_igw",
            "aws_vpc.zabbix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zabbix_rt_subet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0402ceb0d2467aefe",
            "route_table_id": "rtb-0504a53c9ea22b1ea",
            "subnet_id": "subnet-0f91249d16c2ad023"
          },
          "dependencies": [
            "aws_internet_gateway.zabbix_igw",
            "aws_route_table.zabbix_rt",
            "aws_subnet.zabbix_subnet_a",
            "aws_vpc.zabbix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zabbix_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:959028105308:subnet/subnet-0f91249d16c2ad023",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f91249d16c2ad023",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "959028105308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zabbix_subnet_1a"
            },
            "tags_all": {
              "Name": "zabbix_subnet_1a"
            },
            "vpc_id": "vpc-07f92fbb5f8752980"
          },
          "dependencies": [
            "aws_vpc.zabbix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zabbix_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:959028105308:vpc/vpc-07f92fbb5f8752980",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02d4a3038061abc7f",
            "default_route_table_id": "rtb-0582c4d6926e855b8",
            "default_security_group_id": "sg-0270c4e38276098fb",
            "dhcp_options_id": "dopt-03ad9d64",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07f92fbb5f8752980",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0582c4d6926e855b8",
            "owner_id": "959028105308",
            "tags": {
              "Name": "zabbix_vpc"
            },
            "tags_all": {
              "Name": "zabbix_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:959028105308:security-group/sg-094e5c82c265ad2e8",
            "description": "Security group for example usage with EC2 instance",
            "egress": [],
            "id": "sg-094e5c82c265ad2e8",
            "ingress": [],
            "name": "example-20220508151056460400000001",
            "name_prefix": "example-",
            "owner_id": "959028105308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-07f92fbb5f8752980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zabbix_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1645609732",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-094e5c82c265ad2e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zabbix_vpc",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "153.242.74.11/32"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1190946635",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-094e5c82c265ad2e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zabbix_vpc",
            "data.http.ifconfig",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "153.242.74.11/32"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1206822160",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-094e5c82c265ad2e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zabbix_vpc",
            "data.http.ifconfig",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "153.242.74.11/32"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-262400751",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-094e5c82c265ad2e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zabbix_vpc",
            "data.http.ifconfig",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}